# typePractice-Cpp

./: CMakeLists.txt  main.cpp
game/: Game.cpp  Game.h  Maze.cpp  Maze.h
include/openai/: openai.hpp
lib/: FileControllInterface.cpp  FileControllInterface.h  utils.cpp  utils.h
scriptManage/longScriptFile/: A Shattered Reflection  Forgotten Melodies  The Veil of Secrets  Threads of Destiny  Whispers in the Mist  fileInfo.txt
scriptManage/manager/: ParagraphManager.cpp  ParagraphManager.h  ScriptManager.cpp  ScriptManager.h
scriptManage/scriptFile/: sentences.txt  words.txt
scriptManage/shortScriptFile/: Dracula  Echoes of Destiny  Fragments of a Dream  Lost in Time  Shadows of the Past  Whispers of the Wind  boy and ocean  fileInfo.txt  man and girl
service/: Practice.cpp  Practice.h
service/Practice/: ParagraphTypePractice.cpp  ParagraphTypePractice.h  WordSentenceTypePractice.cpp  WordSentenceTypePractice.h
service/record/: Recorder.cpp  Recorder.h  UserService.cpp  UserService.h
user/: User.cpp  User.h  user_data.txt
